--- a/DDA.styleguide/styleguide.html
+++ b/DDA.styleguide/styleguide.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StyleSheet DDA - Styleguide</title>
-    <link rel="stylesheet" href="DDA.styleguide/styleguide.css">
-    <link rel="stylesheet" href="DDA.styleguide/index.css">
+    <link rel="stylesheet" href="styleguide.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
