van button naar link

--- a/DDA/DDA.html
+++ b/DDA/DDA.html
@@ -90,9 +90,9 @@
             <p class="Datum-locatie">WO 9 NOV / AMSTERDAM</p>
             <p class="h2">DUTCH DIGITAL DAY: THE 10TH EDITION</p>
             <div>
-                <button class="details" type="button">DETAILS
+                <link rel="html" href="details.html">DETAILS
                 <img src="IconPijl-rechts.svg" alt="Pijltje naar rechts">
-                </button>
+            </link>
             </div>
     </div>
     </article>  
@@ -106,6 +106,7 @@
             <p class="h2">LEDEN BIJEENKOMST</p>
             <div>
                 <button class="details" type="button">DETAILS
+
                 <img src="IconPijl-rechts.svg" alt="Pijltje naar rechts">
                 </button>
             </div>  
