--- a/DDA/DDA.html
+++ b/DDA/DDA.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Client Website</title>
         <link rel="stylesheet" href="DDA.css">
+        <script src="DDA.js"></script>
     
 
     <!-- Archivo text type -->
