--- a/DDA/DDA.html
+++ b/DDA/DDA.html
@@ -90,10 +90,7 @@
             <p class="DDD-icon">DDD</p>
             <p class="Datum-locatie">WO 9 NOV / AMSTERDAM</p>
             <p class="h2">DUTCH DIGITAL DAY: THE 10TH EDITION</p>
-            <div>
-                <link rel="html" href="details.html">DETAILS
-                <img src="IconPijl-rechts.svg" alt="Pijltje naar rechts">
-            </link>
+            <a href="details.html">DETAILS</a>
             </div>
     </div>
     </article>  
